added storkey implementaiton: credit Nikita

--- a/rnn.ipynb
+++ b/rnn.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9e24b8f4-601d-4cb2-b46e-de2e230c23e4",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,8 @@
     "import os\n",
     "\n",
     "# import models\n",
-    "from hopfield_baseline import HopfieldRNN"
+    "from hopfield_baseline import HopfieldRNN\n",
+    "from storkey import HopfieldRNNStorkey"
    ]
   },
   {
