--- a/individual_notebooks/visualize_spiking.ipynb
+++ b/individual_notebooks/visualize_spiking.ipynb
@@ -79,11 +79,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_output_patterns(original, masked, grayscale, binarized, type, num_images=5):\n",
+    "def plot_outputs(original, masked, grayscale, binarized, type, num_images=5):\n",
     "    fig, axes = plt.subplots(4, num_images, figsize=(12, 8))\n",
     "\n",
     "    for i in range(num_images):\n",
@@ -305,7 +305,7 @@
     }
    ],
    "source": [
-    "plot_output_patterns(spyking_patterns[:5], spyking_masked[:5], grayscale_masked, binarized_masked, \"Masked\")"
+    "plot_outputs(spyking_patterns[:5], spyking_masked[:5], grayscale_masked, binarized_masked, \"Masked\")"
    ]
   },
   {
@@ -332,7 +332,7 @@
     }
    ],
    "source": [
-    "plot_output_patterns(spyking_patterns[:5], spyking_flipped[:5], grayscale_flipped, binarized_flipped, \"Flipped\")"
+    "plot_outputs(spyking_patterns[:5], spyking_flipped[:5], grayscale_flipped, binarized_flipped, \"Flipped\")"
    ]
   },
   {
